crates/snapshot-tests/tests/snapshots/parser__booleans.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: valid_toml
---
{
  "true": true,
  "false": false
}
