crates/snapshot-tests/tests/snapshots/parser__empty_table-2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: spans
---
note[table]: root_foo
  ┌─ empty_table:2:1
  │  
2 │ ╭ [foo]
3 │ │ 
  │ ╰^

note[table]: root
  ┌─ empty_table:1:1
  │  
1 │ ╭ 
2 │ │ [foo]
3 │ │ 
  │ ╰^
