crates/snapshot-tests/tests/snapshots/parser__fruit-2.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: spans
---
note[string]: root_fruit_0_name
  ┌─ fruit:2:8
  │
2 │ name = "apple"
  │        ^^^^^^^

note[string]: root_fruit_0_physical_color
  ┌─ fruit:5:9
  │
5 │ color = "red"
  │         ^^^^^

note[string]: root_fruit_0_physical_shape
  ┌─ fruit:6:9
  │
6 │ shape = "round"
  │         ^^^^^^^

note[table]: root_fruit_0_physical
  ┌─ fruit:4:1
  │  
4 │ ╭ [fruit.physical]
5 │ │ color = "red"
6 │ │ shape = "round"
  │ ╰───────────────^

note[string]: root_fruit_0_variety_0_name
  ┌─ fruit:9:8
  │
9 │ name = "red delicious"
  │        ^^^^^^^^^^^^^^^

note[table]: root_fruit_0_variety_0
  ┌─ fruit:8:1
  │  
8 │ ╭ [[fruit.variety]]
9 │ │ name = "red delicious"
  │ ╰──────────────────────^

note[string]: root_fruit_0_variety_1_name
   ┌─ fruit:12:8
   │
12 │ name = "granny smith"
   │        ^^^^^^^^^^^^^^

note[table]: root_fruit_0_variety_1
   ┌─ fruit:11:1
   │  
11 │ ╭ [[fruit.variety]]
12 │ │ name = "granny smith"
   │ ╰─────────────────────^

note[array]: root_fruit_0_variety
   ┌─ fruit:8:1
   │  
 8 │ ╭ [[fruit.variety]]
 9 │ │ name = "red delicious"
10 │ │ 
11 │ │ [[fruit.variety]]
12 │ │ name = "granny smith"
   │ ╰─────────────────────^

note[table]: root_fruit_0
  ┌─ fruit:1:1
  │  
1 │ ╭ [[fruit]]
2 │ │ name = "apple"
  │ ╰──────────────^

note[string]: root_fruit_1_name
   ┌─ fruit:15:8
   │
15 │ name = "banana"
   │        ^^^^^^^^

note[string]: root_fruit_1_variety_0_name
   ┌─ fruit:18:8
   │
18 │ name = "plantain"
   │        ^^^^^^^^^^

note[table]: root_fruit_1_variety_0
   ┌─ fruit:17:1
   │  
17 │ ╭ [[fruit.variety]]
18 │ │ name = "plantain"
   │ ╰─────────────────^

note[array]: root_fruit_1_variety
   ┌─ fruit:17:1
   │  
17 │ ╭ [[fruit.variety]]
18 │ │ name = "plantain"
   │ ╰─────────────────^

note[table]: root_fruit_1
   ┌─ fruit:14:1
   │  
14 │ ╭ [[fruit]]
15 │ │ name = "banana"
   │ ╰───────────────^

note[array]: root_fruit
   ┌─ fruit:1:1
   │  
 1 │ ╭ [[fruit]]
 2 │ │ name = "apple"
 3 │ │ 
 4 │ │ [fruit.physical]
   · │
14 │ │ [[fruit]]
15 │ │ name = "banana"
   │ ╰───────────────^

note[table]: root
   ┌─ fruit:1:1
   │  
 1 │ ╭ [[fruit]]
 2 │ │ name = "apple"
 3 │ │ 
 4 │ │ [fruit.physical]
   · │
18 │ │ name = "plantain"
19 │ │ 
   │ ╰^
